calc/parser/gen/calcli_parser.go
// Code generated from Calcli.g4 by ANTLR 4.13.1. DO NOT EDIT.

package parser // Calcli

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type CalcliParser struct {
	*antlr.BaseParser
}

var CalcliParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func calcliParserInit() {
	staticData := &CalcliParserStaticData
	staticData.LiteralNames = []string{
		"", "'abs'", "'acos'", "'asin'", "'atan'", "'ceil'", "','", "'cos'",
		"'.'", "'e'", "'!'", "'exp'", "'exp2'", "", "", "'floor'", "'ln'", "'log'",
		"'log2'", "'log10'", "'('", "'-'", "'mod'", "'nrt'", "'%'", "'percent'",
		"'pi'", "'+'", "'^'", "'round'", "'$pr'", "')'", "'sin'", "'*'", "'/'",
		"'sqrt'", "'tan'",
	}
	staticData.SymbolicNames = []string{
		"", "ABS", "ACOS", "ASIN", "ATAN", "CEIL", "COMMA", "COS", "DOT", "EULER",
		"EXCLAMATION", "EXP", "EXP2", "INT", "FLOAT", "FLOOR", "LN", "LOG",
		"LOG2", "LOG10", "LPAREN", "MINUS", "MOD", "NRT", "PERCENT", "PERCENTAGE",
		"PI", "PLUS", "POW", "ROUND", "PREVIOS", "RPAREN", "SIN", "STAR", "SLASH",
		"SQRT", "TAN", "WS",
	}
	staticData.RuleNames = []string{
		"unit", "constant", "number", "variable", "mathFunc", "absMathFunc",
		"acosMathFunc", "asinMathFunc", "atanMathFunc", "ceilMathFunc", "cosMathFunc",
		"expMathFunc", "exp2MathFunc", "floorMathFunc", "lnMathFunc", "logMathFunc",
		"log2MathFunc", "log10MathFunc", "modMathFunc", "nrtMathFunc", "percentMathFunc",
		"roundMathFunc", "sinMathFunc", "sqrtMathFunc", "tanMathFunc", "start",
		"expr",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// CalcliParserInit initializes any static state used to implement CalcliParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewCalcliParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func CalcliParserInit() {
	staticData := &CalcliParserStaticData
	staticData.once.Do(calcliParserInit)
}

// NewCalcliParser produces a new parser instance for the optional input antlr.TokenStream.
func NewCalcliParser(input antlr.TokenStream) *CalcliParser {
	CalcliParserInit()
	this := new(CalcliParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &CalcliParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "Calcli.g4"

	return this
}

// CalcliParser tokens.
const (
	CalcliParserEOF         = antlr.TokenEOF
	CalcliParserABS         = 1
	CalcliParserACOS        = 2
	CalcliParserASIN        = 3
	CalcliParserATAN        = 4
	CalcliParserCEIL        = 5
	CalcliParserCOMMA       = 6
	CalcliParserCOS         = 7
	CalcliParserDOT         = 8
	CalcliParserEULER       = 9
	CalcliParserEXCLAMATION = 10
	CalcliParserEXP         = 11
	CalcliParserEXP2        = 12
	CalcliParserINT         = 13
	CalcliParserFLOAT       = 14
	CalcliParserFLOOR       = 15
	CalcliParserLN          = 16
	CalcliParserLOG         = 17
	CalcliParserLOG2        = 18
	CalcliParserLOG10       = 19
	CalcliParserLPAREN      = 20
	CalcliParserMINUS       = 21
	CalcliParserMOD         = 22
	CalcliParserNRT         = 23
	CalcliParserPERCENT     = 24
	CalcliParserPERCENTAGE  = 25
	CalcliParserPI          = 26
	CalcliParserPLUS        = 27
	CalcliParserPOW         = 28
	CalcliParserROUND       = 29
	CalcliParserPREVIOS     = 30
	CalcliParserRPAREN      = 31
	CalcliParserSIN         = 32
	CalcliParserSTAR        = 33
	CalcliParserSLASH       = 34
	CalcliParserSQRT        = 35
	CalcliParserTAN         = 36
	CalcliParserWS          = 37
)

// CalcliParser rules.
const (
	CalcliParserRULE_unit            = 0
	CalcliParserRULE_constant        = 1
	CalcliParserRULE_number          = 2
	CalcliParserRULE_variable        = 3
	CalcliParserRULE_mathFunc        = 4
	CalcliParserRULE_absMathFunc     = 5
	CalcliParserRULE_acosMathFunc    = 6
	CalcliParserRULE_asinMathFunc    = 7
	CalcliParserRULE_atanMathFunc    = 8
	CalcliParserRULE_ceilMathFunc    = 9
	CalcliParserRULE_cosMathFunc     = 10
	CalcliParserRULE_expMathFunc     = 11
	CalcliParserRULE_exp2MathFunc    = 12
	CalcliParserRULE_floorMathFunc   = 13
	CalcliParserRULE_lnMathFunc      = 14
	CalcliParserRULE_logMathFunc     = 15
	CalcliParserRULE_log2MathFunc    = 16
	CalcliParserRULE_log10MathFunc   = 17
	CalcliParserRULE_modMathFunc     = 18
	CalcliParserRULE_nrtMathFunc     = 19
	CalcliParserRULE_percentMathFunc = 20
	CalcliParserRULE_roundMathFunc   = 21
	CalcliParserRULE_sinMathFunc     = 22
	CalcliParserRULE_sqrtMathFunc    = 23
	CalcliParserRULE_tanMathFunc     = 24
	CalcliParserRULE_start           = 25
	CalcliParserRULE_expr            = 26
)

// IUnitContext is an interface to support dynamic dispatch.
type IUnitContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Number() INumberContext
	Constant() IConstantContext
	Variable() IVariableContext

	// IsUnitContext differentiates from other interfaces.
	IsUnitContext()
}

type UnitContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyUnitContext() *UnitContext {
	var p = new(UnitContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = CalcliParserRULE_unit
	return p
}

func InitEmptyUnitContext(p *UnitContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = CalcliParserRULE_unit
}

func (*UnitContext) IsUnitContext() {}

func NewUnitContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *UnitContext {
	var p = new(UnitContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = CalcliParserRULE_unit

	return p
}

func (s *UnitContext) GetParser() antlr.Parser { return s.parser }

func (s *UnitContext) Number() INumberContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INumberContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INumberContext)
}

func (s *UnitContext) Constant() IConstantContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IConstantContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IConstantContext)
}

func (s *UnitContext) Variable() IVariableContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IVariableContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IVariableContext)
}

func (s *UnitContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *UnitContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *UnitContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CalcliListener); ok {
		listenerT.EnterUnit(s)
	}
}

func (s *UnitContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CalcliListener); ok {
		listenerT.ExitUnit(s)
	}
}

func (p *CalcliParser) Unit() (localctx IUnitContext) {
	localctx = NewUnitContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, CalcliParserRULE_unit)
	p.SetState(57)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case CalcliParserINT, CalcliParserFLOAT:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(54)
			p.Number()
		}

	case CalcliParserEULER, CalcliParserPI:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(55)
			p.Constant()
		}

	case CalcliParserPREVIOS:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(56)
			p.Variable()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IConstantContext is an interface to support dynamic dispatch.
type IConstantContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EULER() antlr.TerminalNode
	PI() antlr.TerminalNode

	// IsConstantContext differentiates from other interfaces.
	IsConstantContext()
}

type ConstantContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyConstantContext() *ConstantContext {
	var p = new(ConstantContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = CalcliParserRULE_constant
	return p
}

func InitEmptyConstantContext(p *ConstantContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = CalcliParserRULE_constant
}

func (*ConstantContext) IsConstantContext() {}

func NewConstantContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ConstantContext {
	var p = new(ConstantContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = CalcliParserRULE_constant

	return p
}

func (s *ConstantContext) GetParser() antlr.Parser { return s.parser }

func (s *ConstantContext) EULER() antlr.TerminalNode {
	return s.GetToken(CalcliParserEULER, 0)
}

func (s *ConstantContext) PI() antlr.TerminalNode {
	return s.GetToken(CalcliParserPI, 0)
}

func (s *ConstantContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ConstantContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ConstantContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CalcliListener); ok {
		listenerT.EnterConstant(s)
	}
}

func (s *ConstantContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CalcliListener); ok {
		listenerT.ExitConstant(s)
	}
}

func (p *CalcliParser) Constant() (localctx IConstantContext) {
	localctx = NewConstantContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, CalcliParserRULE_constant)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(59)
		_la = p.GetTokenStream().LA(1)

		if !(_la == CalcliParserEULER || _la == CalcliParserPI) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// INumberContext is an interface to support dynamic dispatch.
type INumberContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	INT() antlr.TerminalNode
	FLOAT() antlr.TerminalNode

	// IsNumberContext differentiates from other interfaces.
	IsNumberContext()
}

type NumberContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyNumberContext() *NumberContext {
	var p = new(NumberContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = CalcliParserRULE_number
	return p
}

func InitEmptyNumberContext(p *NumberContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = CalcliParserRULE_number
}

func (*NumberContext) IsNumberContext() {}

func NewNumberContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *NumberContext {
	var p = new(NumberContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = CalcliParserRULE_number

	return p
}

func (s *NumberContext) GetParser() antlr.Parser { return s.parser }

func (s *NumberContext) INT() antlr.TerminalNode {
	return s.GetToken(CalcliParserINT, 0)
}

func (s *NumberContext) FLOAT() antlr.TerminalNode {
	return s.GetToken(CalcliParserFLOAT, 0)
}

func (s *NumberContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NumberContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *NumberContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CalcliListener); ok {
		listenerT.EnterNumber(s)
	}
}

func (s *NumberContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CalcliListener); ok {
		listenerT.ExitNumber(s)
	}
}

func (p *CalcliParser) Number() (localctx INumberContext) {
	localctx = NewNumberContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, CalcliParserRULE_number)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(61)
		_la = p.GetTokenStream().LA(1)

		if !(_la == CalcliParserINT || _la == CalcliParserFLOAT) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IVariableContext is an interface to support dynamic dispatch.
type IVariableContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	PREVIOS() antlr.TerminalNode

	// IsVariableContext differentiates from other interfaces.
	IsVariableContext()
}

type VariableContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyVariableContext() *VariableContext {
	var p = new(VariableContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = CalcliParserRULE_variable
	return p
}

func InitEmptyVariableContext(p *VariableContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = CalcliParserRULE_variable
}

func (*VariableContext) IsVariableContext() {}

func NewVariableContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *VariableContext {
	var p = new(VariableContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = CalcliParserRULE_variable

	return p
}

func (s *VariableContext) GetParser() antlr.Parser { return s.parser }

func (s *VariableContext) PREVIOS() antlr.TerminalNode {
	return s.GetToken(CalcliParserPREVIOS, 0)
}

func (s *VariableContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *VariableContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *VariableContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CalcliListener); ok {
		listenerT.EnterVariable(s)
	}
}

func (s *VariableContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CalcliListener); ok {
		listenerT.ExitVariable(s)
	}
}

func (p *CalcliParser) Variable() (localctx IVariableContext) {
	localctx = NewVariableContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, CalcliParserRULE_variable)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(63)
		p.Match(CalcliParserPREVIOS)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IMathFuncContext is an interface to support dynamic dispatch.
type IMathFuncContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AbsMathFunc() IAbsMathFuncContext
	AcosMathFunc() IAcosMathFuncContext
	AsinMathFunc() IAsinMathFuncContext
	AtanMathFunc() IAtanMathFuncContext
	CeilMathFunc() ICeilMathFuncContext
	CosMathFunc() ICosMathFuncContext
	ExpMathFunc() IExpMathFuncContext
	Exp2MathFunc() IExp2MathFuncContext
	FloorMathFunc() IFloorMathFuncContext
	LnMathFunc() ILnMathFuncContext
	LogMathFunc() ILogMathFuncContext
	Log2MathFunc() ILog2MathFuncContext
	Log10MathFunc() ILog10MathFuncContext
	ModMathFunc() IModMathFuncContext
	NrtMathFunc() INrtMathFuncContext
	PercentMathFunc() IPercentMathFuncContext
	RoundMathFunc() IRoundMathFuncContext
	SinMathFunc() ISinMathFuncContext
	SqrtMathFunc() ISqrtMathFuncContext
	TanMathFunc() ITanMathFuncContext

	// IsMathFuncContext differentiates from other interfaces.
	IsMathFuncContext()
}

type MathFuncContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMathFuncContext() *MathFuncContext {
	var p = new(MathFuncContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = CalcliParserRULE_mathFunc
	return p
}

func InitEmptyMathFuncContext(p *MathFuncContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = CalcliParserRULE_mathFunc
}

func (*MathFuncContext) IsMathFuncContext() {}

func NewMathFuncContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MathFuncContext {
	var p = new(MathFuncContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = CalcliParserRULE_mathFunc

	return p
}

func (s *MathFuncContext) GetParser() antlr.Parser { return s.parser }

func (s *MathFuncContext) AbsMathFunc() IAbsMathFuncContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAbsMathFuncContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAbsMathFuncContext)
}

func (s *MathFuncContext) AcosMathFunc() IAcosMathFuncContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAcosMathFuncContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAcosMathFuncContext)
}

func (s *MathFuncContext) AsinMathFunc() IAsinMathFuncContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAsinMathFuncContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAsinMathFuncContext)
}

func (s *MathFuncContext) AtanMathFunc() IAtanMathFuncContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAtanMathFuncContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAtanMathFuncContext)
}

func (s *MathFuncContext) CeilMathFunc() ICeilMathFuncContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICeilMathFuncContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICeilMathFuncContext)
}

func (s *MathFuncContext) CosMathFunc() ICosMathFuncContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICosMathFuncContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICosMathFuncContext)
}

func (s *MathFuncContext) ExpMathFunc() IExpMathFuncContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExpMathFuncContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExpMathFuncContext)
}

func (s *MathFuncContext) Exp2MathFunc() IExp2MathFuncContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExp2MathFuncContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExp2MathFuncContext)
}

func (s *MathFuncContext) FloorMathFunc() IFloorMathFuncContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFloorMathFuncContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFloorMathFuncContext)
}

func (s *MathFuncContext) LnMathFunc() ILnMathFuncContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILnMathFuncContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILnMathFuncContext)
}

func (s *MathFuncContext) LogMathFunc() ILogMathFuncContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILogMathFuncContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILogMathFuncContext)
}

func (s *MathFuncContext) Log2MathFunc() ILog2MathFuncContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILog2MathFuncContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILog2MathFuncContext)
}

func (s *MathFuncContext) Log10MathFunc() ILog10MathFuncContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILog10MathFuncContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILog10MathFuncContext)
}

func (s *MathFuncContext) ModMathFunc() IModMathFuncContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IModMathFuncContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IModMathFuncContext)
}

func (s *MathFuncContext) NrtMathFunc() INrtMathFuncContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INrtMathFuncContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INrtMathFuncContext)
}

func (s *MathFuncContext) PercentMathFunc() IPercentMathFuncContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPercentMathFuncContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPercentMathFuncContext)
}

func (s *MathFuncContext) RoundMathFunc() IRoundMathFuncContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRoundMathFuncContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRoundMathFuncContext)
}

func (s *MathFuncContext) SinMathFunc() ISinMathFuncContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISinMathFuncContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISinMathFuncContext)
}

func (s *MathFuncContext) SqrtMathFunc() ISqrtMathFuncContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISqrtMathFuncContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISqrtMathFuncContext)
}
